MTP-1654 better fix for accept/reject checkbox spacing

--- a/mtp_noms_ops/assets-src/stylesheets/views/_checks.scss
+++ b/mtp_noms_ops/assets-src/stylesheets/views/_checks.scss
@@ -196,7 +196,13 @@ table.mtp-table--review {
 }
 
 .mtp-check-form-spacing > div.form-group {
+  // There's an issue here with the margins stacking
+  // for some elements but not others
   margin-top: 1em !important;
-  margin-bottom: 1em !important;
+  margin-bottom: 0em !important;
   position: relative;
+}
+
+.mtp-check-details-spacing {
+  margin-top: 1em;
 }
